[TASK] Trade: Icons cut off fix (RT-2786)

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -2270,7 +2270,17 @@
           padding-left: 0px;
           padding-right: 0px;
           text-decoration: none;
+          width: 24px;
         }
+          .fa-check-circle {
+            border: 0;
+            background: transparent;
+            margin-left: 0;
+            font-size: 18px;
+            width: 20px;
+            float: right;
+            line-height: 24px;
+          }
 
         .btn-link[disabled] {
           text-decoration: none;
